fix: force publish because of npm shortage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ publish:
     PLUGIN_GIT_METHOD: gl
     PLUGIN_MODE: publish
     PLUGIN_ADD_MODULES: semantic-release-monorepo @semantic-release/gitlab
-    PLUGIN_OVERRIDE: npx --no-install lerna exec ${PACKAGE_SCOPE} --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo
+    PLUGIN_OVERRIDE: npx --no-install lerna exec ${PACKAGE_SCOPE} --parallel -- npx --no-install semantic-release -e semantic-release-monorepo
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
     PLUGIN_UPDATE_README_TOC: "true"
