fix(nx-builders): added init method to builders

--- a/packages/nx-builders/tsconfig.json
+++ b/packages/nx-builders/tsconfig.json
@@ -7,7 +7,9 @@
     "paths": {
       "@src/*": ["*"],
       "@application/*": ["schematics/application/*"],
-      "@init/*": ["schematics/init/*"]
+      "@init/*": ["schematics/init/*"],
+      "@builders/*": ["builders/*"],
+      "@utils/*": ["utils/*"]
     }
   },
   "include": ["src"],
