--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -10,7 +10,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "schematics": "./collection.json",
+  "schematics": "./schematics.json",
   "builders": "./builders.json",
   "scripts": {
     "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
