--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -10,8 +10,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "schematics": "./collection.json",
-  "builders": "./builders.json",
+  "schematics": "./schematics.json",
   "scripts": {
     "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
     "build": "tsc -p tsconfig.build.json && tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
