--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,10 +54,10 @@ publish:
     PLUGIN_GIT_METHOD: gl
     PLUGIN_MODE: publish
     PLUGIN_ADD_MODULES: semantic-release-monorepo @semantic-release/gitlab
-    PLUGIN_OVERRIDE: npx --no-install lerna exec ${PACKAGE_SCOPE} --parallel -- npx --no-install semantic-release -e semantic-release-monorepo
+    PLUGIN_OVERRIDE: npx --no-install lerna exec ${PACKAGE_SCOPE} --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
-    PLUGIN_UPDATE_README_TOC: "true"
+    PLUGIN_UPDATE_README_TOC: 'true'
     PLUGIN_README_LOCATION: "README.md $$(find packages -maxdepth 2 -name README.md | paste -sd ' ')"
     PLUGIN_NPM_TOKEN: $NPM_WS_TOKEN
     DRONE_REPO_BRANCH: $CI_COMMIT_REF_NAME
