--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,8 +10,9 @@
     "access": "public"
   },
   "scripts": {
-    "lint": "prettier --write ./*.js && eslint --ext .ts,.js,.tsx,.jsx --fix ./",
-    "lint:check": "eslint --ext .ts,.js,.tsx,.jsx ./"
+    "lint": "prettier --loglevel warn --write ./*.js && eslint --ext .ts,.js,.tsx,.jsx --fix ./",
+    "lint:check": "eslint --ext .ts,.js,.tsx,.jsx ./",
+    "lint:staged": "lint-staged"
   },
   "husky": {
     "hooks": {
@@ -21,11 +22,11 @@
   },
   "lint-staged": {
     "./*.{ts,js,tsx,jsx}": [
-      "prettier --write",
+      "prettier --loglevel warn --write",
       "eslint --fix"
     ],
     "./*.{json,md}": [
-      "prettier --write"
+      "prettier --loglevel warn --write"
     ]
   },
   "peerDependencies": {
