--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -15,8 +15,9 @@
     "dev:build": "yarn prebuild && tsc -p tsconfig.json && tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
     "dev:start": "yarn dev:build && TS_NODE_PROJECT='tsconfig.paths.json' tsc-watch --noClear --onSuccess \"yarn dev:start:onSuccess\"",
     "dev:start:onSuccess": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
-    "lint": "prettier --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
-    "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/"
+    "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
+    "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
+    "lint:staged": "lint-staged"
   },
   "husky": {
     "hooks": {
@@ -26,11 +27,11 @@
   },
   "lint-staged": {
     "./*.{ts,js,tsx,jsx}": [
-      "prettier --write",
+      "prettier --loglevel warn --write",
       "eslint --fix"
     ],
     "./*.{json,md}": [
-      "prettier --write"
+      "prettier --loglevel warn --write"
     ]
   },
   "keywords": [
