--- a/package.json
+++ b/package.json
@@ -25,17 +25,13 @@
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
-  "dependencies": {
-    "@nrwl/workspace": "10.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@nrwl/workspace": "10.2.1",
     "@cenk1cenk2/cz-cc": "^1.1.2",
     "commitizen": "^4.0.5",
-    "eslint": "^7.5.0",
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
     "typescript": "^4.0.3"
   },
   "config": {
