--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -42,6 +42,7 @@
     "@webundsoehne/nx-builders": "*",
     "@webundsoehne/nx-tools": "*",
     "chalk": "^4.1.0",
+    "change-case": "^4.1.1",
     "deepmerge": "^4.2.2",
     "enquirer": "^2.3.5",
     "execa": "^4.0.2",
