--- a/packages/nx-tools/tsconfig.json
+++ b/packages/nx-tools/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "@src/*": ["*"],
       "@integration/*": ["integration/*"],
+      "@interfaces/*": ["interfaces/*"],
       "@init/*": ["init/*"],
       "@rules/*": ["rules/*"],
       "@utils/*": ["utils/*"]
