feat: add generate exports functionallity for index.ts generation

--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -38,12 +38,14 @@
     "@angular-devkit/core": "^10.1.2",
     "@angular-devkit/schematics": "~10.1.2",
     "@nrwl/cli": "^10.2.0",
+    "@types/micromatch": "^4.0.1",
     "deepmerge": "^4.2.2",
     "diff": "^4.0.2",
     "eslint": "^7.9.0",
     "execa": "^4.0.2",
     "figures": "^3.2.0",
     "listr2": "^3.1.1",
+    "micromatch": "^4.0.2",
     "nunjucks": "^3.2.1",
     "pidtree": "^0.5.0",
     "prettier": "^2.1.2",
