--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint:check": "yarn command --concurrency 1 lint:check"
   },
   "workspaces": {
-    "packages": ["packages/*"],
+    "packages": [
+      "packages/*"
+    ],
     "nohoist": []
   },
   "husky": {
@@ -27,8 +29,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@nrwl/workspace": "10.2.1",
     "@cenk1cenk2/cz-cc": "^1.1.2",
+    "@nrwl/workspace": "10.3.0",
     "commitizen": "^4.0.5",
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
@@ -40,8 +42,8 @@
     }
   },
   "resolutions": {
-    "**/@angular-devkit/architect": "0.1001.2",
-    "**/@angular-devkit/core": "10.1.2",
-    "**/@angular-devkit/schematics": "10.1.2"
+    "**/@angular-devkit/architect": "0.1001.4",
+    "**/@angular-devkit/core": "10.1.4",
+    "**/@angular-devkit/schematics": "10.1.4"
   }
 }
