--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
     "build": "tsc -p tsconfig.build.json",
-    "postbuild": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
+    "postbuild": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist && cpy --cwd=src --parents '**/*.json' ../dist/ && rimraf dist/**/files/ && cpy --cwd=src --parents '**/files/**' ../dist/",
     "dev:build": "yarn prebuild && tsc -p tsconfig.json && yarn postbuild",
     "dev:start": "yarn dev:build && TS_NODE_PROJECT='tsconfig.paths.json' tsc-watch --noClear --onSuccess \"yarn postbuild\"",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
@@ -57,6 +57,7 @@
     "@types/figures": "^3.0.1",
     "@types/nunjucks": "^3.1.3",
     "@types/prettier": "^2.0.1",
+    "cpy-cli": "^3.1.1",
     "lint-staged": "^10.2.11",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.2.8",
