--- a/packages/nx-nest/tsconfig.json
+++ b/packages/nx-nest/tsconfig.json
@@ -8,7 +8,8 @@
       "@src/*": ["*"],
       "@application/*": ["schematics/application/*"],
       "@init/*": ["schematics/init/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@interfaces/*": ["interfaces/*"]
     }
   },
   "include": ["src"],
