--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -16,7 +16,7 @@
     "build": "tsc -p tsconfig.build.json",
     "postbuild": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist && cpy --cwd=src --parents '**/*.json' ../dist/ && rimraf dist/**/files/ && cpy --cwd=src --parents '**/files/**' ../dist/",
     "dev:build": "yarn prebuild && tsc -p tsconfig.json && yarn postbuild",
-    "dev:start": "yarn dev:build && TS_NODE_PROJECT='tsconfig.paths.json' tsc-watch --noClear --onSuccess \"yarn postbuild\"",
+    "dev:start": "yarn dev:build && tsc-watch --noClear --onSuccess \"yarn postbuild\"",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged"
@@ -40,6 +40,7 @@
     "@angular-devkit/schematics": "~10.1.2",
     "@nrwl/cli": "^10.2.0",
     "@types/micromatch": "^4.0.1",
+    "@types/picomatch": "^2.2.1",
     "deepmerge": "^4.2.2",
     "diff": "^4.0.2",
     "eslint": "^7.9.0",
@@ -48,6 +49,7 @@
     "listr2": "^3.1.1",
     "micromatch": "^4.0.2",
     "nunjucks": "^3.2.1",
+    "picomatch": "^2.2.2",
     "pidtree": "^0.5.0",
     "prettier": "^2.1.2",
     "through": "^2.3.8"
