feat: finished exports generated documentation

--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -37,11 +37,11 @@
     }
   },
   "lint-staged": {
-    "./*.{ts,js,tsx,jsx}": [
+    "./**/*.{ts,js,tsx,jsx}": [
       "prettier --loglevel warn --write",
       "eslint --fix"
     ],
-    "./*.{json,md}": [
+    "./**/*.{json,md}": [
       "prettier --loglevel warn --write"
     ]
   },
