--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -19,8 +19,8 @@
     "dev:start": "yarn dev:build && tsc-watch --noClear --onSuccess \"yarn postbuild\"",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
-    "lint:staged": "lint-staged",
-    "docs:jsdoc": "jsdoc2md --files './src/interfaces/**' --configure './jsdoc2md.json' > ./API.md"
+    "lint:staged": "lint-staged && yarn docs:jsdoc",
+    "docs:jsdoc": "jsdoc2md --files './src/**' --configure './jsdoc2md.json' > ./API.md"
   },
   "husky": {
     "hooks": {
@@ -29,8 +29,8 @@
     }
   },
   "lint-staged": {
-    "./*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*",
