refactor: moved properties to enums fixed versions and stuff

--- a/packages/nx-builders/tsconfig.json
+++ b/packages/nx-builders/tsconfig.json
@@ -9,7 +9,8 @@
       "@application/*": ["schematics/application/*"],
       "@init/*": ["schematics/init/*"],
       "@builders/*": ["builders/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@interfaces/*": ["interfaces/*"]
     }
   },
   "include": ["src"],
