--- a/packages/nx-nest/src/schematics/application/files/Dockerfile
+++ b/packages/nx-nest/src/schematics/application/files/Dockerfile
@@ -1,20 +1,18 @@
 FROM node:14-alpine
 
+# Workdir for node package
 WORKDIR /data/app
+
 COPY . /data/app
 
-# copy transpiled files to the main root and remove the dist folder
-RUN cp -rpf ./dist/* ./ && rm -rf ./dist
+# Install Tini
+RUN apk --no-cache --no-progress add tini
 
-# install dependencies in a separate step so docker build process will use cached layers if package.json remains unchanged
-COPY package.json yarn.lock ../
-RUN cd ../ && yarn --production --frozen-lockfile
+# Create custom entrypoint supports environment variables
+RUN printf "#!/bin/ash\nyarn start" > /entrypoint.sh && \
+  chmod +x /entrypoint.sh
 
-# create node_modules symlink reuired for typescript (typeorm) migrations and seeds
-RUN ln -s ../node_modules ./node_modules
+# Install Node packages, can not use lock file because of NX
+RUN yarn --production
 
-# Start app (service is determined by NODE_SERVICE env var)
-# Note: we do not provide a default value for NODE_SERVICE on purpose, since this could lead to subtle bugs (for instance - forget to
-# set NODE_SERVICE=task and all of a sudden your task container is a server instead, without any errors)
-CMD yarn start
-
+ENTRYPOINT ["/sbin/tini", "-vg", "--", "/entrypoint.sh"]
