--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -53,7 +53,7 @@
     "@nestjs/swagger": ">= 4 < 5",
     "class-transformer": ">= 0.3.0",
     "class-validator": ">= 0.12.0",
-    "fastify": ">= 3.0.0",
+    "fastify": ">= 2 < 3",
     "fastify-swagger": ">= 3.0.0",
     "graphql": ">= 15 < 16",
     "nest-schedule": ">= 0.6.0"
