--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "link-packages": "lerna link --force-local",
     "lint": "yarn command --concurrency 1 lint",
     "lint:check": "yarn command --concurrency 1 lint:check",
+    "lint:staged": "yarn command --concurrency 1 lint:staged",
     "docs:jsdoc": "yarn command --no-bail docs:jsdoc"
   },
   "workspaces": {
@@ -24,7 +25,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run docs:jsdoc && yarn command --concurrency 1 lint:staged",
+      "pre-commit": "yarn run docs:jsdoc && yarn run lint:staged",
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
