--- a/packages/nx-builders/.eslintrc
+++ b/packages/nx-builders/.eslintrc
@@ -1,1 +1,35 @@
-{ "extends": "../../.eslintrc.js", "rules": {}, "ignorePatterns": ["!**/*"] }
+{
+  "extends": "../../.eslintrc.js",
+  "rules": {
+    "import/order": [
+      "error",
+      {
+        "pathGroups": [
+          {
+            "pattern": "@src/**",
+            "group": "index"
+          },
+          {
+            "pattern": "@interfaces/**",
+            "group": "index"
+          },
+          {
+            "pattern": "@utils/**",
+            "group": "index"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["builtin"],
+        "groups": [
+          ["builtin", "external"],
+          ["index", "parent", "sibling"]
+        ],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
+  },
+  "ignorePatterns": ["!**/*"]
+}
