--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@webundsoehne/nx-tools",
+  "name": "@webundsoehne/nx-workspace",
   "version": "1.0.0",
-  "description": "Common tools for NX.",
+  "description": "Workspace plugin for Nx",
   "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,23 +36,10 @@
     "@nrwl/workspace": "*"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1001.2",
-    "@angular-devkit/core": "^10.1.2",
     "@angular-devkit/schematics": "~10.1.2",
-    "@nrwl/cli": "^10.2.0",
-    "@types/micromatch": "^4.0.1",
-    "@types/picomatch": "^2.2.1",
-    "diff": "^4.0.2",
-    "eslint": "^7.9.0",
-    "execa": "^4.0.2",
-    "figures": "^3.2.0",
-    "listr2": "^3.1.1",
-    "micromatch": "^4.0.2",
-    "nunjucks": "^3.2.1",
-    "picomatch": "^2.2.2",
-    "pidtree": "^0.5.0",
-    "prettier": "^2.1.2",
-    "through": "^2.3.8"
+    "@webundsoehne/nx-tools": "*",
+    "enquirer": "^2.3.5",
+    "listr2": "^3.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -61,14 +48,9 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
+    "cpy-cli": "^3.1.1",
     "jsdoc-babel": "^0.5.0",
     "jsdoc-to-markdown": "^6.0.1",
-    "@types/diff": "^4.0.2",
-    "@types/eslint": "^7.2.0",
-    "@types/figures": "^3.0.1",
-    "@types/nunjucks": "^3.1.3",
-    "@types/prettier": "^2.0.1",
-    "cpy-cli": "^3.1.1",
     "lint-staged": "^10.2.11",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.2.8",
