--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -20,7 +20,7 @@
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
-    "docs:jsdoc": "jsdoc2md --files './src/**' --configure './jsdoc2md.json' > ./API.md && git add ./API.md"
+    "docs:jsdoc": "echo 'disabled for now' && exit 0 && jsdoc2md --files './src/**' --configure './jsdoc2md.json' > ./API.md && git add ./API.md"
   },
   "husky": {
     "hooks": {
