feat: mostly microservice provider solved, still some bugs to fix and testing

--- a/packages/nx-nest/tsconfig.build.json
+++ b/packages/nx-nest/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts", "**/files"],
+  "exclude": ["node_modules", "dist", "test", "**/*spec.ts", "**/files", "**/templates"],
   "compilerOptions": {
     "rootDir": "src",
     "baseUrl": "src",
