--- a/packages/nx-builders/tsconfig.json
+++ b/packages/nx-builders/tsconfig.json
@@ -11,5 +11,5 @@
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "**/files"]
+  "exclude": ["node_modules", "dist", "**/files", "**/templates"]
 }
