--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
     "build": "tsc -p tsconfig.build.json",
-    "postbuild": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist && cpy --cwd=src --parents '**/*.json' ../dist/ && rimraf dist/**/files/ && cpy --cwd=src --parents '**/files/**' ../dist/",
+    "postbuild": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist && cpy --cwd=src --parents '**/*.json' ../dist/ && rimraf dist/**/files/ dist/**/assets/ && cpy --cwd=src --parents '**/files/**' '**/assets/**' ../dist/",
     "dev:build": "yarn prebuild && tsc -p tsconfig.json && yarn postbuild",
     "dev:start": "yarn dev:build && tsc-watch --noClear --onSuccess \"yarn postbuild\"",
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
@@ -49,6 +49,7 @@
     "listr2": "^3.1.1",
     "micromatch": "^4.0.2",
     "nunjucks": "^3.2.1",
+    "change-case": "^4.1.1",
     "picomatch": "^2.2.2",
     "pidtree": "^0.5.0",
     "prettier": "^2.1.2",
