--- a/packages/nx-tools/tsconfig.json
+++ b/packages/nx-tools/tsconfig.json
@@ -17,5 +17,5 @@
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "**/files"]
+  "exclude": ["node_modules", "dist", "**/files", "**/templates"]
 }
