feat(microservice-client): isolated all microservices exported it as a module

--- a/packages/nx-tools/tsconfig.json
+++ b/packages/nx-tools/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "@src/*": ["*"],
       "@init/*": ["init/*"],
+      "@constants/*": ["constants/*"],
       "@integration/*": ["integration/*"],
       "@interfaces/*": ["interfaces/*"],
       "@rules/*": ["rules/*"],
