--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -70,6 +70,8 @@
     "@types/node": "^14.0.27",
     "@types/supertest": "^2.0.8",
     "@types/winston": "^2.4.4",
+    "amqp-connection-manager": "^3.2.1",
+    "amqplib": "^0.6.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "concurrently": "^5.0.0",
