--- a/packages/nestjs-util/tsconfig.json
+++ b/packages/nestjs-util/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./dist",
     "rootDir": "src",
     "baseUrl": "src",
+    "removeComments": false,
     "paths": {
       "@filter": ["filter/index"],
       "@filter/*": ["filter/*"],
