feat: started brownie finished microservices

--- a/packages/brownie/tsconfig.json
+++ b/packages/brownie/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./dist",
     "rootDir": "src",
     "baseUrl": "src",
+    "strictNullChecks": false,
     "paths": {
       "@src/*": ["*"],
       "@commands/*": ["commands/*"],
