--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -74,7 +74,7 @@
     "@cenk1cenk2/boilerplate-oclif": "^1.2.11",
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
-    "@oclif/errors": "^1.3.3",
+    "@oclif/errors": "^1.3.4",
     "@tiagonapoli/oclif-plugin-spaced-commands": "^0.0.6",
     "enquirer": "^2.3.5",
     "execa": "^4.0.2",
@@ -82,15 +82,19 @@
     "globby": "^11.0.0",
     "listr2": "^3.1.1",
     "nunjucks": "^3.2.2",
+    "through": "^2.3.8",
     "tslib": "^2.0.1",
     "types": "^0.1.1",
+    "update-notifier": "^5.0.1",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.22.2",
-    "@types/fs-extra": "^9.0.1",
+    "@types/fs-extra": "^9.0.4",
     "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.14.7",
+    "@types/through": "^0.0.30",
+    "@types/update-notifier": "^5.0.0",
     "eslint": "^7.6.0",
     "husky": "^4.2.5",
     "jest": "^26.2.2",
