--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -29,27 +29,32 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1001.2",
-    "@angular-devkit/core": "^10.1.2",
-    "@angular-devkit/schematics": "~10.1.2",
-    "@nrwl/cli": "^10.2.0",
+    "@angular-devkit/architect": "^0.1100.0",
+    "@angular-devkit/core": "^11.0.0",
+    "@angular-devkit/schematics": "~11.0.0",
+    "@nrwl/cli": "^10.3.3",
     "@types/micromatch": "^4.0.1",
     "@types/picomatch": "^2.2.1",
-    "diff": "^4.0.2",
+    "change-case": "^4.1.1",
+    "diff": "^5.0.0",
     "eslint": "^7.9.0",
     "execa": "^4.0.2",
     "figures": "^3.2.0",
     "listr2": "^3.1.1",
     "micromatch": "^4.0.2",
     "nunjucks": "^3.2.1",
-    "change-case": "^4.1.1",
     "picomatch": "^2.2.2",
     "pidtree": "^0.5.0",
     "prettier": "^2.1.2",
@@ -62,14 +67,14 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
-    "jsdoc-babel": "^0.5.0",
-    "jsdoc-to-markdown": "^6.0.1",
     "@types/diff": "^4.0.2",
     "@types/eslint": "^7.2.0",
     "@types/figures": "^3.0.1",
     "@types/nunjucks": "^3.1.3",
     "@types/prettier": "^2.0.1",
     "cpy-cli": "^3.1.1",
+    "jsdoc-babel": "^0.5.0",
+    "jsdoc-to-markdown": "^6.0.1",
     "lint-staged": "^10.2.11",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.2.8",
