--- a/packages/nx-workspace/package.json
+++ b/packages/nx-workspace/package.json
@@ -29,19 +29,13 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
-  },
-  "peerDependencies": {
-    "@nrwl/workspace": "*"
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "dependencies": {
     "@angular-devkit/schematics": "~11.0.0",
+    "@angular-devkit/core": "~11.0.0",
+    "@nrwl/workspace": "^10.3.3",
     "@webundsoehne/nx-tools": "*",
     "chalk": "^4.1.0",
     "enquirer": "^2.3.5",
