--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint:check": "yarn command --concurrency 1 lint:check",
     "lint:staged": "yarn command --concurrency 1 lint:staged",
     "docs:jsdoc": "yarn command --no-bail docs:jsdoc",
-    "scripts:link": "./scripts/link-packages.sh"
+    "scripts:link": "./scripts/link-packages.sh",
+    "scripts:workspace": "./scripts/link-packages-to-workspace.sh"
   },
   "workspaces": {
     "packages": [
@@ -33,7 +34,7 @@
   "dependencies": {},
   "devDependencies": {
     "@cenk1cenk2/cz-cc": "^1.1.2",
-    "@nrwl/workspace": "10.3.3",
+    "@nrwl/workspace": "10.4.0",
     "commitizen": "^4.0.5",
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
@@ -45,8 +46,8 @@
     }
   },
   "resolutions": {
-    "**/@angular-devkit/architect": "0.1100.0",
-    "**/@angular-devkit/core": "11.0.0",
-    "**/@angular-devkit/schematics": "11.0.0"
+    "**/@angular-devkit/architect": "0.1000.4",
+    "**/@angular-devkit/core": "10.0.4",
+    "**/@angular-devkit/schematics": "10.0.4"
   }
 }
