--- a/packages/brownie/config/default.yml
+++ b/packages/brownie/config/default.yml
@@ -12,3 +12,5 @@ workspace:
     - '@nrwl/workspace'
     - '@angular-devkit/core'
     - '@angular-devkit/schematics'
+
+npm_registry: https://verdaccio.dev.webundsoehne.com
