--- a/packages/brownie/config/defaults/nx-libs.config.yml
+++ b/packages/brownie/config/defaults/nx-libs.config.yml
@@ -1,3 +1,3 @@
 - name: NestJS Backend Skeleton
   description: Supports Restful or GraphQL Backend Server with schedeluded background tasks and external command line interface.
-  package: "@webundsoehne/nx-nest"
+  package: "@webundsoehne-int/nx-nest"
