--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -29,22 +29,17 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1100.0",
-    "@angular-devkit/core": "^11.0.0",
-    "@angular-devkit/schematics": "~11.0.0",
-    "@nrwl/cli": "^10.3.3",
+    "@angular-devkit/architect": "^0.11000.1",
+    "@angular-devkit/core": "^11.0.1",
+    "@angular-devkit/schematics": "~11.0.1",
+    "@nrwl/cli": "^10.4.0",
     "@types/micromatch": "^4.0.1",
     "@types/picomatch": "^2.2.1",
     "change-case": "^4.1.1",
@@ -68,7 +63,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@types/diff": "^4.0.2",
-    "@types/eslint": "^7.2.0",
+    "@types/eslint": "^7.2.5",
     "@types/figures": "^3.0.1",
     "@types/nunjucks": "^3.1.3",
     "@types/prettier": "^2.0.1",
