--- a/packages/brownie/config/defaults/workspace.config.yml
+++ b/packages/brownie/config/defaults/workspace.config.yml
@@ -1,3 +1,3 @@
-- package: '@webundsoehne-int/nx-workspace'
+- pkg: '@webundsoehne-private/nx-workspace'
   registry: https://verdaccio.dev.webundsoehne.com
   collection: collections.json
