--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -84,6 +84,7 @@
     "tslib": "^2.0.1",
     "types": "^0.1.1",
     "update-notifier": "^5.0.1",
+    "update-notifier2": "^1.0.6",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
