--- a/packages/brownie/templates/containers/mysql/volumes.yml
+++ b/packages/brownie/templates/containers/mysql/volumes.yml
@@ -2,3 +2,7 @@
   to: /docker-entrypoint-initdb.d/mysql-initialize.sh
   options: ro
   mode: file
+
+- from: db
+  to: /var/lib/mysql
+  mode: volume
