--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run docs:jsdoc && yarn run lint:staged",
+      "pre-commit": "yarn run lint:staged",
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
   "dependencies": {},
   "devDependencies": {
     "@cenk1cenk2/cz-cc": "^1.1.2",
-    "@nrwl/workspace": "10.4.2",
+    "@nrwl/workspace": "^10.4.4",
     "commitizen": "^4.0.5",
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
+    "markdown-toc": "^1.2.0",
     "typescript": "^4.0.3"
   },
   "config": {
