--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -23,12 +23,13 @@
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
     "release": "yarn lint && yarn readme",
-    "readme": "yarn oclif-dev readme",
     "oclif": "oclif $command",
     "oclif-dev": "node -r tsconfig-paths/register ../../node_modules/@oclif/dev-cli/bin/run",
     "test": "NODE_ENV=test jest --forceExit --runInBand --config ./tests/jest.config.js",
     "test:cov": "NODE_ENV=test jest --coverage --config ./tests/jest.config.js",
-    "dev:test": "NODE_ENV=test jest --verbose --runInBand --forceExit --watchAll --config ./tests/jest.config.js"
+    "dev:test": "NODE_ENV=test jest --verbose --runInBand --forceExit --watchAll --config ./tests/jest.config.js",
+    "docs:readme": "yarn oclif-dev readme",
+    "docs:toc": "markdown-toc README.md --bullets='-' -i"
   },
   "husky": {
     "hooks": {
@@ -70,10 +71,11 @@
     "cenk1cenk2"
   ],
   "dependencies": {
-    "@cenk1cenk2/boilerplate-oclif": "^1.4.3",
+    "@cenk1cenk2/boilerplate-oclif": "^1.5.0",
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/errors": "^1.3.4",
+    "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.5",
     "execa": "^4.0.2",
     "fs-extra": "^9.0.0",
