--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -8,7 +8,8 @@
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://verdaccio.dev.webundsoehne.com"
   },
   "schematics": "./schematics.json",
   "scripts": {
@@ -20,7 +21,8 @@
     "lint": "prettier --loglevel warn --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
-    "docs:jsdoc": "jsdoc2md --files './src/**' --configure './jsdoc2md.json' > ./API.md && git add ./API.md"
+    "docs:jsdoc": "jsdoc2md --files './src/**' --configure './jsdoc2md.json' > ./API.md",
+    "docs:toc": "markdown-toc README.md --bullets='-' -i"
   },
   "husky": {
     "hooks": {
