--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -75,7 +75,7 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/errors": "^1.3.4",
-    "@webundsoehne/nx-tools": "1.2.1",
+    "@webundsoehne/nx-tools": "*",
     "enquirer": "^2.3.5",
     "execa": "^4.0.2",
     "fs-extra": "^9.0.0",
