--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,13 +48,13 @@ publish:
     PLUGIN_GIT_METHOD: gl
     PLUGIN_MODE: publish
     PLUGIN_ADD_MODULES: "@qiwi/multi-semantic-release @semantic-release/gitlab"
-    PLUGIN_OVERRIDE: multi-semantic-release --debug
+    PLUGIN_OVERRIDE: multi-semantic-release
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
     PLUGIN_UPDATE_README_TOC: "false"
-    PLUGIN_NPM_USERNAME: $NPM_WS_USERNAME
-    PLUGIN_NPM_PASSWORD: $NPM_WS_PASSWORD
-    PLUGIN_NPM_EMAIL: $NPM_WS_EMAIL
+    NPM_USERNAME: $NPM_WS_USERNAME
+    NPM_PASSWORD: $NPM_WS_PASSWORD
+    NPM_EMAIL: $NPM_WS_EMAIL
     # PLUGIN_NPM_TOKEN: $NPM_WS_TOKEN
     DRONE_REPO_BRANCH: $CI_COMMIT_REF_NAME
   before_script:
