--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -49,7 +49,8 @@
   "files": [
     "bin/",
     "config/",
-    "dist/"
+    "dist/",
+    "templates/"
   ],
   "oclif": {
     "commands": "./dist/commands",
