--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,9 +52,9 @@ publish:
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
     PLUGIN_UPDATE_README_TOC: "false"
-    # PLUGIN_NPM_USERNAME: $NPM_WS_USERNAME
-    # PLUGIN_NPM_PASSWORD: $NPM_WS_PASSWORD
-    # PLUGIN_NPM_EMAIL: $NPM_WS_EMAIL
+    PLUGIN_NPM_USERNAME: $NPM_WS_USERNAME
+    PLUGIN_NPM_PASSWORD: $NPM_WS_PASSWORD
+    PLUGIN_NPM_EMAIL: $NPM_WS_EMAIL
     PLUGIN_NPM_TOKEN: $NPM_WS_TOKEN
     DRONE_REPO_BRANCH: $CI_COMMIT_REF_NAME
   before_script:
